--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile-providers",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "mobile provider",
   "main": "index.js",
   "directories": {
@@ -22,5 +22,19 @@
   "bugs": {
     "url": "https://github.com/dottgonzo/mobile-providers/issues"
   },
-  "homepage": "https://github.com/dottgonzo/mobile-providers#readme"
+  "homepage": "https://github.com/dottgonzo/mobile-providers#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-bump": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-prompt": "^0.1.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tag-version": "^1.3.0",
+    "gulp-typescript": "^2.11.0",
+    "gulp-util": "^3.0.7",
+    "mocha": "^2.4.5"
+  }
 }
